--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container-sm px-4 p-5 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="container-sm px-4 p-5 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg" style="text-align: center;">
       <div id="root"></div>
     </div>
     <!--
